Name:               broch
Version:            0.1
Synopsis:           OAuth2/OpenID Connect Server
Description:
  .
  Implementation of a (web server-agnostic) OAuth2 and OpenID
  Connect Provider library with a scotty server implementation.

Author:             Luke Taylor <tekul.hs@gmail.com>
Maintainer:         Luke Taylor <tekul.hs@gmail.com>
License:            BSD3
License-File:       LICENSE
Build-Type:         Simple
Cabal-Version:      >= 1.16
Category:           OAuth

Source-Repository head
  Type:             git
  Location:         git://github.com/tekul/broch.git

Library
  Default-Language:   Haskell2010
  Exposed-modules:    Broch.Model
                    , Broch.Token
                    , Broch.Random
                    , Broch.OAuth2.Token
                    , Broch.OAuth2.Authorize
                    , Broch.OAuth2.Internal
                    , Broch.OpenID.Discovery
                    , Broch.OpenID.IdToken
                    , Broch.OpenID.Registration
                    , Broch.OpenID.UserInfo
                    , Broch.Persist
                    , Broch.Scotty
  Other-Modules:      Broch.Scim
  Build-Depends:      base >= 4 && < 5
                    , time
                    , either >= 3.4
                    , mtl >= 2.1
                    , blaze-builder >= 0.3
                    , blaze-html >= 0.7
                    , bcrypt >= 0.0.4
                    , bytestring >= 0.10
                    , containers >= 0.4
                    , cookie     >= 0.4
                    , clientsession >= 0.9
                    , jose-jwt      >= 0.1
                    , cryptohash >= 0.11 && < 0.12
                    , crypto-pubkey >= 0.2 && < 0.3
                    , cipher-aes >= 0.2 && < 0.3
                    , cprng-aes >= 0.5.2 && < 0.6
                    , crypto-random >= 0.0.7
                    , data-default-generics >= 0.3
                    , http-types >= 0.8
                    , aeson >= 0.7.0.6
                    , text  >= 0.11
                    , base16-bytestring
                    , base64-bytestring >= 1
                    , persistent >= 1.2 && < 1.4
                    , persistent-template >= 1.2
                    , scotty >= 0.7.2
                    , stm >= 2.4
                    , transformers >= 0.3
                    , unordered-containers >= 0.2
                    , uuid >= 1.3
                    , monad-logger >= 0.3
                    , wai >= 3.0.0.2
  Ghc-Options:        -Wall

Test-suite tests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Other-Modules:      Broch.OAuth2.TokenSpec
                    , Broch.OAuth2.AuthorizationSpec
                    , Broch.OAuth2.TestData
                    , WaiTest
                    , OAuth2IntegrationSpec
                    , OICIntegrationSpec
  Build-depends:      broch
                    , jose-jwt
                    , aeson-qq > 0.7
                    , base
                    , blaze-builder >= 0.3
                    , case-insensitive
                    , containers
                    , cookie
                    , deepseq
                    , either
                    , time
                    , bytestring
                    , base64-bytestring
                    , cryptohash
                    , crypto-pubkey
                    , crypto-random
                    , cipher-aes
                    , cprng-aes
                    , http-types
                    , mtl
                    , network
                    , persistent
                    , persistent-sqlite
                    , text
                    , transformers
                    , aeson
                    , hspec >= 1.6
                    , HUnit >= 1.2 && < 2
                    , QuickCheck >= 2.4
                    , wai
                    , wai-extra >= 3.0.0.1

  Ghc-options:        -Wall -rtsopts -fno-warn-missing-signatures
  Hs-source-dirs:     tests
  Main-is:            tests.hs

