Name:               broch
Version:            0.1
Synopsis:           OAuth2/OpenID Connect Server
Description:
  .
  A (web server-agnostic) OAuth2 and OpenID Connect Provider
  library with a WAI-based server implementation.

Author:             Luke Taylor <tekul.hs@gmail.com>
Maintainer:         Luke Taylor <tekul.hs@gmail.com>
License:            BSD3
License-File:       LICENSE
Build-Type:         Simple
Cabal-Version:      >= 1.16
Category:           OAuth

Source-Repository head
  Type:             git
  Location:         git://github.com/tekul/broch.git

Library
  Default-Language:   Haskell2010
  Exposed-modules:    Broch.Model
                    , Broch.Token
                    , Broch.OAuth2.ClientAuth
                    , Broch.OAuth2.Token
                    , Broch.OAuth2.Authorize
                    , Broch.OAuth2.Internal
                    , Broch.OpenID.Discovery
                    , Broch.OpenID.IdToken
                    , Broch.OpenID.Registration
                    , Broch.OpenID.UserInfo
                    , Broch.PostgreSQL
                    , Broch.Persist
                    , Broch.Persist.Internal
                    , Broch.Server
                    , Broch.Server.Config
                    , Broch.Server.Internal
                    , Broch.Server.Session
                    , Broch.Test
  Other-Modules:      Broch.Scim
                    , Broch.Server.BlazeUI
  Build-Depends:      base >= 4 && < 5
                    , aeson >= 0.8.1.0
                    , errors >= 2
                    , blaze-builder >= 0.3
                    , blaze-html >= 0.7
                    , bytestring >= 0.10
                    , cereal     >= 0.4
                    , containers >= 0.4
                    , cookie     >= 0.4
                    , cryptonite >= 0.8
                    , data-default-generics >= 0.3
                    , directory
                    , http-conduit > 2
                    , http-types >= 0.8
                    , jose-jwt   >= 0.7
                    , memory     >= 0.10
                    , mtl >= 2.1.3.1
                    , network-uri > 2.6
                    , persistent >= 2.1 && < 3
                    , persistent-template >= 2.1 && < 3
                    , postgresql-simple >= 0.5.1
                    , reroute >= 0.2.3
                    , resource-pool > 0.2.3
                    , text  >= 0.11
                    , time
                    , transformers >= 0.3
                    , unordered-containers >= 0.2
                    , uuid >= 1.3
                    , wai >= 3.0.0.2
                    , wai-extra >= 3
  Ghc-Options:        -Wall

Executable broch
  Default-Language:   Haskell2010
  Hs-Source-Dirs:     broch-server
  Main-Is:            broch.hs
  Build-Depends:      broch
                    , base
                    , bytestring
                    , cryptonite
                    , directory
                    , memory
                    , monad-logger >= 0.3
                    , optparse-applicative
                    , persistent-sqlite
                    , postgresql-simple
                    , reroute
                    , resource-pool
                    , text
                    , wai-app-static >= 3.1.4
                    , wai-extra
                    , warp >= 3

  Ghc-Options:        -Wall -rtsopts -threaded

Test-suite tests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Other-Modules:      Broch.OAuth2.TokenSpec
                    , Broch.OAuth2.AuthorizationSpec
                    , Broch.OAuth2.TestData
                    , WaiTest
                    , OAuth2IntegrationSpec
                    , OICIntegrationSpec
  Build-depends:      broch
                    , base
                    , aeson
                    , aeson-qq > 0.7
                    , blaze-builder >= 0.3
                    , bytestring
                    , containers
                    , cookie
                    , cryptonite
                    , http-types
                    , hspec >= 1.6
                    , HUnit >= 1.2 && < 2
                    , jose-jwt
                    , memory
                    , mtl
                    , monad-logger
                    , network-uri
                    , persistent-sqlite >= 2.1 && < 3
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , wai
                    , wai-extra >= 3.0.0.1
                    , warp

  Ghc-options:        -Wall -rtsopts -fno-warn-missing-signatures
  Hs-source-dirs:     tests
  Main-is:            tests.hs
